--- a/Airliners.net/Airliners.net/Views/Home/Index.cshtml
+++ b/Airliners.net/Airliners.net/Views/Home/Index.cshtml
@@ -3,12 +3,33 @@
     ViewBag.Title = "Index";
 }
 
+@{
+    Layout = null;
+} 
+<!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width" />
+    <link href="∼/Content/bootstrap.css" rel="stylesheet" />
+    <link href="∼/Content/bootstrap-theme.css" rel="stylesheet" />
+    <title>Index</title>
+    <style>
+        .btn a {
+            color: white;
+            text-decoration: none;
+        }
 
+        body {
+            background-color: #F1F1F1;
+        }
+    </style>
 </head>
 <body>
-
+        <div class="btn btn-success">
+            @Html.ActionLink("Registrate Ahora", "Registro")
+            @Html.
+        </div>
+    
 </body>
 </html>
 
