Barra Horizontal OK, Login  no OK

--- a/Airliners.net/Airliners.net/Views/Home/Registro.cshtml
+++ b/Airliners.net/Airliners.net/Views/Home/Registro.cshtml
@@ -1,12 +1,13 @@
 ﻿@model Airliners.net.Models.UsuarioRegistro
 
 @{
-    ViewBag.Title = "Registro de Usuario"
+    ViewBag.Title = "Registro de Usuario";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Registro","Home",FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
     
