--- a/Airliners.net/Airliners.net/Views/Shared/_loginpartial.cshtml
+++ b/Airliners.net/Airliners.net/Views/Shared/_loginpartial.cshtml
@@ -1,16 +1,22 @@
-﻿<!DOCTYPE html>
+﻿@using Airliners.net.Models;
+        @if (Request.IsAuthenticated)
+        {
+            using (Html.BeginForm("LogOff", "Home", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+            {
+                @Html.AntiForgeryToken()
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>_loginpartial</title>
-</head>
-<body>
-    <div> 
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        @Html.ActionLink("Hello " + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                    </li>
+                    <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                </ul>
+            }
+        }
+        else
+        {
         <ul class="nav navbar-nav navbar-right">
             <li>@Html.ActionLink("Register", "Registro", "Home", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
             <li>@Html.ActionLink("Log in", "Login", "Home", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
         </ul>
-    </div>
-</body>
-</html>
+        }
