--- a/Airliners.net/Airliners.net/Views/Shared/_loginpartial.cshtml
+++ b/Airliners.net/Airliners.net/Views/Shared/_loginpartial.cshtml
@@ -8,6 +8,6 @@
       }
        @if (Session["usuario"] != null) {
         <ul class="nav navbar-nav navbar-right">
-            <li>@Html.ActionLink("Logout", "Login", "Home", routeValues: null, htmlAttributes: new { id = "logout" })</li>
+            <li>@Html.ActionLink("Logout", "Logout", "Home", routeValues: null, htmlAttributes: new { id = "logout" })</li>
         </ul>
           }
