--- a/FITOCRACY/FITOCRACY/Views/Home/AboutUs.cshtml
+++ b/FITOCRACY/FITOCRACY/Views/Home/AboutUs.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "LogSucces";
+    ViewBag.Title = "AboutUs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>LogSucces</h2>
+<h2>AboutUs</h2>
 
