Updating Scripts, Views and Controllers

--- a/Airliners.net/Airliners.net/Views/Shared/_Layout.cshtml
+++ b/Airliners.net/Airliners.net/Views/Shared/_Layout.cshtml
@@ -23,10 +23,11 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("News", "http://flynews.es")</li>
                     @if (Session["usuario"] != null)
                     {
                         <li>@Html.ActionLink((String)@Session["usuario"],"")</li>
+                        
                     }
                 </ul>
                 @Html.Partial("_Loginpartial");
