--- a/Airliners.net/Airliners.net/Views/Foto/MasInfo.cshtml
+++ b/Airliners.net/Airliners.net/Views/Foto/MasInfo.cshtml
@@ -4,17 +4,15 @@
     ViewBag.Title = "MasInfo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<br />
-<br />
 
-<h2>Añadir Foto Paso2</h2>
+<h2>MasInfo</h2>
 
-@using (Html.BeginForm("MasInfo","Foto",FormMethod.Post))
+@using (Html.BeginForm("MasInfo","Foto",FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-     
+        <h4>AddFoto</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -48,8 +46,7 @@
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
             </div>
         </div>
-        @Html.Label((string)Session["nombreFoto"]);
-        @Html.Label((string)Session["usuario"]);
+
         <div class="form-group">
             @Html.LabelFor(model => model.notes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -57,6 +54,7 @@
                 @Html.ValidationMessageFor(model => model.notes, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Subir" class="btn btn-default" />
@@ -66,5 +64,5 @@
 }
 
 <div>
-    @Html.ActionLink("Volver", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
