--- a/Airliners.net/Airliners.net/Views/Foto/TusFotos.cshtml
+++ b/Airliners.net/Airliners.net/Views/Foto/TusFotos.cshtml
@@ -56,6 +56,7 @@
             @Html.DisplayFor(modelItem => item.name)
         </td>
         <td>
+            <img src="@Url.Content("~/Images/"+item.photo))" />
             @Html.DisplayFor(modelItem => item.photo)
         </td>
         <td>
