--- a/Airliners.net/Airliners.net/Views/Foto/TusFotos.cshtml
+++ b/Airliners.net/Airliners.net/Views/Foto/TusFotos.cshtml
@@ -56,7 +56,7 @@
             @Html.DisplayFor(modelItem => item.name)
         </td>
         <td>
-            <img src="@Url.Content("~/Images/"+item.photo))" />
+            <img src="@Url.Content("~/Images/"+@item.photo))" alt="No Disponible" width="300px" height="200px"/>
             @Html.DisplayFor(modelItem => item.photo)
         </td>
         <td>
