--- a/Airliners.net/Airliners.net/Views/Shared/UserBar.cshtml
+++ b/Airliners.net/Airliners.net/Views/Shared/UserBar.cshtml
@@ -6,7 +6,7 @@
                         <li>@Html.ActionLink("Perfil de Usuario", "PerfilUsuario", "Home")</li>
                         <li>@Html.ActionLink("Subir Fotos","AñadirFoto","Foto")</li>
                         <li>@Html.ActionLink("Tus Fotos", "TusFotos", "Foto")</li>
-                        <li>@Html.ActionLink("Fotos Favoritas", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Fotos Favoritas", "VerAlbum", "Foto")</li>
                     </ul>
                 </div>
      
