--- a/Airliners.net/Airliners.net/Views/Foto/EliminarFoto.cshtml
+++ b/Airliners.net/Airliners.net/Views/Foto/EliminarFoto.cshtml
@@ -1,13 +1,15 @@
 ﻿@model Airliners.net.Models.AddFoto
 
 @{
-    ViewBag.Title = "Detalles";
+    ViewBag.Title = "EliminarFoto";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Detalles</h2>
+<h2>EliminarFoto</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
+    <h4>AddFoto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -56,7 +58,7 @@
 
         <dd>
             @{
-                string name=Html.DisplayFor(model => model.photo).ToString();
+                string name = Html.DisplayFor(model => model.photo).ToString();
             }
             <img src="@Url.Content("~/Images/"+name)" alt="No Disponible" width="300px" height="200px" />
         </dd>
@@ -68,11 +70,15 @@
         <dd>
             @Html.DisplayFor(model => model.notes)
         </dd>
-      
 
-       
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Eliminar" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index", "Home");
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Volver", "Index")
-</p>
