--- a/Airliners.net/Airliners.net/Views/Foto/EliminarFoto.cshtml
+++ b/Airliners.net/Airliners.net/Views/Foto/EliminarFoto.cshtml
@@ -5,11 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>EliminarFoto</h2>
+<h2>Eliminar Foto</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Deseas eliminar esta foto?</h3>
 <div>
-    <h4>AddFoto</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -77,8 +77,9 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Eliminar" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index", "Home");
+            <input type="submit" value="Eliminar" class="btn btn-default" /> 
+            <br />
+            @Html.ActionLink("Volver", "Index", "Home");
         </div>
     }
 </div>
