Modulo del Email OK, provisional

--- a/Airliners.net/Airliners.net/Views/Home/Login.cshtml
+++ b/Airliners.net/Airliners.net/Views/Home/Login.cshtml
@@ -42,7 +42,7 @@
 }
 
 <div>
-    
+    @Html.ActionLink("Se te ha olvida como logearte", "Forgot");
     <h4><a href="~/Views/Home/Registro.cshtml">Deseo crear una cuenta</a></h4>
     @Html.ActionLink("Volver a Inicio", "Index")
 </div>
