--- a/Airliners.net/Airliners.net/Views/Shared/_loginpartial.cshtml
+++ b/Airliners.net/Airliners.net/Views/Shared/_loginpartial.cshtml
@@ -2,7 +2,7 @@
       @if (Session["usuario"] == null)
       {
         <ul class="nav navbar-nav navbar-right">
-            <li>@Html.ActionLink("Register", "Registro", "Home", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+            <li>@Html.ActionLink("Register", "CondicionesdeUso", "Home", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
             <li>@Html.ActionLink("Log in", "Login", "Home", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
         </ul>
       }
