--- a/Airliners.net/Airliners.net/Views/Foto/MasInfo.cshtml
+++ b/Airliners.net/Airliners.net/Views/Foto/MasInfo.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>MasInfo</h2>
+<h2>Añadir Foto Paso 2</h2>
 
 @using (Html.BeginForm("MasInfo","Foto",FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AddFoto</h4>
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -64,5 +64,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver", "AñadirFoto")
 </div>
