--- a/Airliners.net/Airliners.net/Views/Home/Detalles.cshtml
+++ b/Airliners.net/Airliners.net/Views/Home/Detalles.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Detalles</h2>
+<h2>Detalles de la Foto Seleccionada</h2>
 
 <div>
     <hr />
