--- a/Airliners.net/Airliners.net/Views/Home/Forgot.cshtml
+++ b/Airliners.net/Airliners.net/Views/Home/Forgot.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Forgot</h2>
+<h2>Formulario de envio de correo para el login</h2>
 
 @using (Html.BeginForm()) 
 {
