--- a/Airliners.net/Airliners.net/Views/Foto/EditarFoto.cshtml
+++ b/Airliners.net/Airliners.net/Views/Foto/EditarFoto.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>EditarFoto</h2>
+<h2>Editar Info de tu Foto</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AddFoto</h4>
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
